lib/bait/tests/inout_error/unknown_type.out
lib/bait/tests/inout_error/unknown_type.in.bt:1:9 error: unknown type u7
