lib/bait/tests/inout_error/unknown_type.in.bt
x := 1 as u7
